<resources>
    <string name="app_name">db_events</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello events list fragment</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="nav_all_events">All Events</string>
    <string name="nav_login">Login</string>
    <string name="nav_register">Register</string>
    <string name="nav_event_detail">Event Detail</string>
    <string name="event_joined">Joined</string>
    <string name="book_event">Participate</string>
    <string name="sign_out">Sign Out</string>
    <string name="previous_events">Previous Events</string>
    <string name="future_events">Future Events</string>
    <string name="fullName_placeholder">Anghel Andrei</string>
    <string name="email_placeholder">andrei@gmail.com</string>
    <string name="nav_profile">Profile</string>
    <string name="filter_by_location">Filter by location</string>
    <string name="picked_date">Picked date:</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
</resources>