<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.db_events.RegisterFragment"
        android:label="@string/nav_register">
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/detailedEventFragment"
            app:popUpTo="@id/registerFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.db_events.LoginFragment"
        android:label="@string/nav_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"/>
        <action
            android:id="@+id/action_loginFragment_to_eventsList"
            app:destination="@id/eventsListFragment" />
    </fragment>
    <fragment
        android:id="@+id/eventsListFragment"
        android:name="com.example.db_events.EventsListFragment"
        android:label="@string/nav_all_events"
        tools:layout="@layout/fragment_events_list">
        <action
            android:id="@+id/action_eventsListFragment_to_detailedEventFragment"
            app:destination="@id/detailedEventFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailedEventFragment"
        android:name="com.example.db_events.DetailedEventFragment"
        android:label="@string/nav_event_detail"
        tools:layout="@layout/fragment_detailed_event" />
</navigation>