<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <TextView
        android:id="@+id/backgroundTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/purple_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.21"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="@dimen/small_margin"
        app:layout_constraintStart_toStartOf="@id/backgroundTop"
        app:layout_constraintTop_toTopOf="@id/backgroundTop"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.18"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:textSize="@dimen/medium_text"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="@id/backgroundTop"
        tools:text="FullName" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/small_text"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/fullName"
        app:layout_constraintStart_toStartOf="@id/fullName"
        app:layout_constraintEnd_toEndOf="@id/fullName"
        tools:text="Email" />

    <com.google.android.material.button.MaterialButton
        android:text="@string/sign_out"
        android:enabled="true"
        android:id="@+id/sign_out"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/medium_text"
        android:layout_marginTop="@dimen/default_margin"
        android:backgroundTint="@color/red"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="@id/email"
        app:layout_constraintEnd_toEndOf="@id/email"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/future_events"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/small_text"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@id/backgroundTop"
        app:layout_constraintStart_toStartOf="@id/backgroundTop"
        app:layout_constraintEnd_toEndOf="@id/backgroundTop"
        android:text="@string/future_events" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/future_events_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/future_events"
        app:layout_constraintStart_toStartOf="@id/future_events"
        app:layout_constraintEnd_toEndOf="@id/future_events"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.35"
        android:layout_marginTop="@dimen/small_margin"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/previous_events"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/small_text"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/future_events_list"
        app:layout_constraintStart_toStartOf="@id/future_events_list"
        app:layout_constraintEnd_toEndOf="@id/future_events_list"
        android:text="@string/previous_events" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/previous_events_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/previous_events"
        app:layout_constraintStart_toStartOf="@id/previous_events"
        app:layout_constraintEnd_toEndOf="@id/previous_events"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.35"
        android:layout_marginTop="@dimen/small_margin"/>

</androidx.constraintlayout.widget.ConstraintLayout>